--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,46 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    android:id="@+id/myRelativeLayout"
+<AbsoluteLayout
+    android:id="@+id/myLinearLayout"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#ff000099"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:background="#ff0033cc"
+    android:padding="4dip"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    >
     <TextView
-        android:id="@+id/lblUserName"
+        android:id="@+id/tvUserName"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:background="#ffff0066"
         android:text="User Name"
+        android:textSize="16sp"
         android:textStyle="bold"
         android:textColor="#ff000000"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true">
+        android:layout_x="0dip"
+        android:layout_y="10dip"
+        >
     </TextView>
     <EditText
-        android:id="@+id/ediUserName"
+        android:id="@+id/etName"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/lblUserName"
-        android:layout_alignParentLeft="true"
-        android:layout_alignLeft="@+id/myRelativeLayout"
-        android:padding="20dip">
+        android:textSize="18sp"
+        android:layout_x="0dip"
+        android:layout_y="38dip"
+        >
     </EditText>
     <Button
-        android:id="@+id/btnGo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/ediUserName"
-        android:layout_alignRight="@+id/ediUserName"
+        android:layout_width="120dip"
         android:text="Go"
-        android:textStyle="bold">
-    </Button>
-    <Button
-        android:id="@+id/btnCancel"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toLeftOf="@+id/btnGo"
-        android:layout_below="@+id/ediUserName"
-        android:text="Cancel"
-        android:textStyle="bold">
-    </Button>
-</RelativeLayout>
+        android:textStyle="bold"
+        android:id="@+id/btnGo"
+        android:layout_x="100dip"
+        android:layout_y="170dip" />
+</AbsoluteLayout>
